# pixelserv-light

./: .gitignore  ChangeLog  Makefile  Makefile.am  TLS_INTEGRATION.md  async_connection.c  async_connection.h  certs.c  certs.h  compat.h  configure.ac  event_loop.h  eventloop.c  eventloop.h  io_uring_async.c  io_uring_async.h  io_uring_backend.c  kqueue_backend.c  logger.c  pixelserv.c  pixelserv_async.c  poll_backend.c  socket_handler.c  socket_handler.h  test_udp_index.c  tlsgate_async.c  util.c  util.h
OldCode/: .gitignore  CHANGELOG.md  CONFIGURATION.md  QUICKSTART.md  RSA-DEMO-ReadMe.md  test_openssl_fetch.c
OldCode/OpenSSLInst/scripts/: live_monitor.sh
OldCode/TongsuoInst/scripts/: activate.sh  generate_sm2_certs.sh  install_tongsuo.sh
OldCode/config-files/: index-minimal.html  index.html  silent-blocks.conf  tlsgateNG.conf.example
OldCode/config-files/System-Services/: ipv4-01.env  ipv4-03.env  ipv4-04.env  ipv6-05.env
OldCode/config-files/html-template/: README.md
OldCode/docs/: ARCHITECTURE.md  LICENSE-SYSTEM.md  MULTI_INSTANCE_SETUP.md  PERFORMANCE_TUNING.md  SECURITY_REQUIREMENTS.md  SINGLE_SERVER_MULTI_INSTANCE.md
OldCode/docs/Architecture/: AVIONTEX_DNS_ARCHITECTURE_INTERNAL.md  AVIONTEX_DNS_ARCHITECTURE_PUBLIC.md  AVIONTEX_DNS_CAPABILITIES.md  AVIONTEX_DNS_DEEP_TECHNICAL_INTERNAL.md  AVIONTEX_DNS_DEEP_TECHNICAL_INTERNAL_PART2.md
OldCode/docs/reports/: REPOSITORY_CLEANUP_PLAN.md
OldCode/examples/: poolgen-legacy.conf  poolgen.conf.default  tlsgateNG-worker-aviontex.conf
OldCode/include/: browser_detection.h  connection.h  extension_hash_table.h  extension_lookup.h  favicon.h  html_loader.h  string_obfuscation.h  worker.h
OldCode/include/templates/: default_template.h
OldCode/sales/: COMPLETE_SALES_SUITE.md  CUSTOMER_1_PROPOSAL.md  DNS_Technology_Differentiation.md  SUMMARY.txt  ZERO_TRUST_DNS_SALES_DECK.md  ZERO_TRUST_DNS_VERKAUFSDECK.md
OldCode/scripts/: ssl-switch.sh
OldCode/src/: common_types.h  version.c
OldCode/src/anti_adblock/: anti_adblock.c  browser_detection.c
OldCode/src/cert/: cert_cache.c  cert_cache.h  cert_generator.c  cert_generator.h  cert_maintenance.c  second_level_tlds.c
OldCode/src/config/: config_file.c
OldCode/src/core/: worker.c
OldCode/src/crypto/: keypool.c
OldCode/src/http/: extension_lookup.c  reverse_proxy.c  reverse_proxy_stub.c  silent_blocker.c
OldCode/src/ipc/: ha_leader.h  shm_manager.c
OldCode/src/pki/: pki_manager.h
OldCode/src/security/: security_intel.c
OldCode/src/tls/: sni_extractor.h
OldCode/src/util/: address_validation.h  logger.h
OldCode/test-scripts/: README.md  run_all_tests.sh  test_http_status_codes.sh  test_keepalive.sh  test_simple.sh
OldCode/test-scripts/http/: test_http_basic.sh
OldCode/tools/: HTML2TimeStampH.py  ca-statistics.sh  cert_benchmark.c  html2bin.py  ssl-switch.sh
TLSGateNGv4-main 4/: CROSSSIGNED_SUBCA.txt  Makefile  README.md  SETUP.md  test_ha_failover.sh  test_openssl_fetch
TLSGateNGv4-main 4/OpenSSLInst/: README.md  setup-start.sh
TLSGateNGv4-main 4/OpenSSLInst/scripts/: activate.sh  activate_force.sh  clean_old_install.sh  install_benchmark_tools.sh  install_openssl3.6_legacy_full.sh  install_openssl_universal.sh  openssl_benchmark_epyc.sh  setup-start.sh  test_legacy_compatibility.sh
TLSGateNGv4-main 4/TongsuoInst/: README.md
TLSGateNGv4-main 4/TongsuoInst/scripts/: test_tlcp.sh
TLSGateNGv4-main 4/config-files/: README.md  benchmark.conf  second-level-tlds.conf  silent-blocks-proxy.conf
TLSGateNGv4-main 4/config-files/System-Services/: ipv4-02.env  ipv4-05.env  ipv6-01.env  ipv6-02.env  ipv6-03.env  ipv6-04.env
TLSGateNGv4-main 4/config-files/html-template/: example1_empty_timestamp.h  example2_text_and_timestamp.h
TLSGateNGv4-main 4/docs/: DEBIAN_BUILD_GUIDE.md  DEEP_SOURCE_ANALYSIS_REFACTORING.md  FEATURES.md  HFRA-Algorithm.md  HTTP_SERVER_ROADMAP.md  PHASE2_PLAN.md  SECURITY_FRAMEWORK.md  SSL_DETECTION_ANALYSIS.md  SYSTEMD_MULTI_INSTANCE.md
TLSGateNGv4-main 4/docs/Architecture/: AVIONTEX_IP_PROTECTION_STRATEGY.md  AVIONTEX_README.md
TLSGateNGv4-main 4/docs/backup/: README.md  ca_statistics.txt
TLSGateNGv4-main 4/docs/reports/: LEGACY_CRYPTO_VERIFICATION_REPORT.md  OPEN_ISSUES_AND_TODOS.md
TLSGateNGv4-main 4/examples/: poolgen-multi.conf  poolgen-rsa.conf  tlsgateNG-poolgen-aviontex.conf  tlsgateNG-poolgen.conf  tlsgateNG-standalone.conf  tlsgateNG-worker.conf
TLSGateNGv4-main 4/include/: anti_adblock.h  html_index.h  response.h  timing_jitter.h  version.h
TLSGateNGv4-main 4/include/templates/: blank_template.h  minimal_template.h  zero_template.h
TLSGateNGv4-main 4/sales/: COMPETITIVE_ADVANTAGE_TRAFFIC_LIMITS.md  DEPLOYMENT_READY.md  KRITIS_DNS_Security_Proposal.md  SALES_MATERIALS_INDEX.md  SALES_PLAYBOOK_QUICK_REFERENCE.md
TLSGateNGv4-main 4/src 2/: tlsgateNG.c
TLSGateNGv4-main 4/src 2/anti_adblock/: timing_jitter.c
TLSGateNGv4-main 4/src 2/cert/: ca_loader.c  ca_loader.h  cert_index.c  cert_index.h  cert_maintenance.h  second_level_tlds.h
TLSGateNGv4-main 4/src 2/config/: config_file.h  config_generator.c  config_generator.h
TLSGateNGv4-main 4/src 2/core/: connection.c
TLSGateNGv4-main 4/src 2/crypto/: keypool.h
TLSGateNGv4-main 4/src 2/http/: response.c  reverse_proxy.h  silent_blocker.h
TLSGateNGv4-main 4/src 2/util/: util.c  (+4 more)
TLSGateNGv4-main 4/test-scripts/: test_405.sh  test_all_status.sh  test_http_fixes.sh  test_http_server.sh
TLSGateNGv4-main 4/tools/: build-all-templates.sh  html2header.sh  html_to_header.py  index.html  set-permissions.sh  setup.sh  tcp-hardening.sh
include/: buffer_pool.h  cert_index.h  cert_index_sharded.h  certs.h  certs_atomic.h  certs_cache.h  certs_conn.h  certs_gen.h  certs_queue.h  certs_stats.h  connection.h  index_udp.h  keypool.h  response.h  second_level_tlds.h  worker.h
src/: buffer_pool.c  cert_index.c  cert_index_sharded.c  certs.c  certs_cache.c  certs_conn.c  certs_gen.c  certs_queue.c  certs_stats.c  connection.c  index_udp.c  keypool.c  response.c  second_level_tlds.c  tlsgate.c  worker.c
workingCode/: Makefile  README.md  pixelserv-tls.1
(+69 files in other folders)
